--- a/Projeto_04_WebMaster/css/style.css
+++ b/Projeto_04_WebMaster/css/style.css
@@ -1,323 +1,598 @@
 *{
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
-	font-family: "Open Sans";
+	font-family: 'Montserrat', sans-serif;
 }
 
-html, body{
+html,body{
 	height: 100%;
-}
-
-@font-face{
-	src:url(../fonts/OpenSans-Light.ttf);
-	font-family: "Open Sans";
 }
 
 .clear{
 	clear: both;
 }
 
-.center{
-	max-width: 1280px;
+.container{
+	max-width: 1400px;
 	width: 100%;
 	margin: 0 auto;
-	padding: 0;
 }
 
-.header{
-	width: 100%;
-	padding: 0 2%;
-	background-color: #212343;	
-	height: 60px;
+/**Header do site**/
 
+header .logo img{
+	float: left;
+	width: 236px;
 }
 
-.header img{
-	margin: 15px;
+header{
+	padding: 20px 2%;
 }
 
-.container-banner{	
-	padding: 0 2%;
-	width: 100%;
-	height: 557px;
-	background-image: url(../images/header_bg.png);
-	/*responsivo*/
-	background-size: cover;
-	background-position: center;
-	/*resṕonsivo*/
-}
-
-.container-banner > .center{
-/*o .form precisou herdar a altura do .center*/
-	height: 100%;
-}
-
-/*o .form precisou herdar a altura do .center*/
-.form{
-	padding: 20px;
-	width: 400px;
-	height: calc(100% + 30px);
+header nav.menu-desktop{
 	float: right;
-	position: relative;
-	top: -15px;
-	border:8px solid rgba(120,120,120,0.7);
-	/*se eu não aplicar o background-clip a transparência
-	da borda não irá aparescer*/
-	/*background-origin tem o mesmo conceito porém 
-	serve para imagens*/
-	background-clip: padding-box; 
+}
+
+header nav.menu-desktop ul{
+	padding: 8px 0;
+	list-style-type: none;
+}
+
+header nav.menu-desktop ul li{
+	float: left;
+	font-size: 14px;
+	padding: 0 20px;
+	text-transform: uppercase;
+}
+
+header nav.menu-mobile{
+	float: right;
+	width: 28px;
+	height: 28px;
+	margin-top: 7px; 
+	background-image: url('../imagens/menu-mobile.png');
+	background-size: 100% 100%;
+	display: none;
+	float: right;
+	cursor: pointer;
+}
+
+nav.menu-mobile ul{
+	display: none;
+	z-index: 999;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 60px;
 	background-color: white;
 }
 
-.form h2{
-	font-weight: normal;
-	color: #99999999;
-	font-size: 21px;
+nav.menu-mobile ul li{
+	text-transform: uppercase;
+	padding: 10px 0;
 }
 
-.input-container{
-	margin-top: 20px;
+header ul a{
+	color: #b4b4b4;
+	text-decoration: none;
 }
 
-.input-container span{
-	display: inline-block;
-	width: 100%;
-	color: #BBBBBBBB;
-	font-size: 17px;
-	font-weight: bold;
-}
+/***/
 
-.form p{
-	margin: 20px 0;
-	display: inline-block;
-	width: 100%;
-	color: #BBBBBBBB;
-	font-size: 17px;
-	font-weight: bold;
-}
+/**MOSAICO**/
 
-.input-container input[type=text]{
-	margin-top: 8px;
-	width: 344px;
-	height: 55px;
-	border: 1px solid #ccc;
-	padding: 8px 10px 8px 10px;
-}
-
-.input-container input[type=text]:focus{
-	outline: 0;
-}
-
-form .input-submit-container{
-	text-align: center;	
-}
-
-.form input[type=submit]{
-	border-bottom: 5px solid #4A5097;
-	border-top: 0;
-	border-left: 0;
-	border-right: 0;
-	color: white;
-	width: 280px;
-	font-size: 25px;
-	height: 56px;
-	cursor: pointer;
-	display: inline-block;
-	background-color: #363A6D;
-}
-
-.form input[type=submit]:hover{
-	background-color: #323665;
-}
-
-.container-list{
-	padding: 30px;
-	margin-top: 100px;
+.mosaico-single{
 	float: left;
-	width: 519px;
-	height: 270px;
-	background-color: rgba(33,36,67,0.7);
+	width: calc(100% / 6);
 }
 
-.container-list ul{
-	list-style-position: inside;
-}
-
-.container-list ul li{
-	margin-top: 18px;
-	color: white;
-}
-
-.container-2{	
-	padding: 40px 2%;
-	background-color: #ddd;
-	text-align: center;
-}
-
-.container-2 h2{
-	font-weight: normal;
-}
-
-.container-2 p{
-	max-width: 768px;
+.img-mosaico-single{
 	width: 100%;
-	margin: 15px 0;
-	display: inline-block;
-	text-align: justify;
+	padding-top: 100%;
+	background-color: #ccc;
+	border: 5px solid white;
+	/*background-image: url('');*/
 }
 
-.arrow{
+/***/
+
+section.servicos > .container{
+	max-width: 800px;
+	display: flex;
+	align-items: center;
 	position: relative;
+	top: -30px;
 	text-align: center;
-	left: 50%;
-	margin-left: -20px;
-	top: 60px;
-	width: 40px;
-	height: 40px;
-	background-image: url(../images/arrow.png);
+} 
+
+section.servicos > .container .box-servico{
+	background-image: url('../imagens/icone_dente.png');
+	background-size: 18px 18px;
+	background-position: center calc(100% - 10px);
+	background-repeat: no-repeat;
+}
+
+section.servicos > .container .box-servico h2{
+	color: white;
+	font-weight: normal;
+	font-size: 15px;
+	text-transform: uppercase;
+}
+
+section.servicos > .container .box-servico p{
+	color: white;
+	margin-top: 8px;
+	font-weight: normal;
+	font-size: 12px;
+}
+
+section.servicos > .container .box-servico:nth-of-type(1){
+	width: 30%;
+	padding: 50px 2%;
+	background-color: #576975;
+}
+
+
+section.servicos > .container .box-servico:nth-of-type(2){
+	width: 40%;
+	padding: 80px 2%;
+	background-color: #688293;
+	background-image: none;
+}
+
+
+section.servicos > .container .box-servico:nth-of-type(3){
+	width: 30%;
+	padding: 50px 2%;
+	background-color: #576975;
+}
+
+section.perfil-container .container{
+	max-width: 1000px;
+}
+
+section.perfil-container .perfil-wraper{
+	padding-top: 60%;
+	position: relative;
+}
+
+section.perfil-container{
+	padding: 40px 0;
+}
+
+section.perfil-container .perfil-wraper2{
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
+section.perfil-container .img-perfil{
+	width: 40%;
+	height: 100%;
+	background-image: url('../imagens/img_perfil.png');
 	background-size: 100% 100%;
 }
 
-.section-1{
-	padding: 90px 2%;
+section.perfil-container .texto-perfil{
+	width: 60%;
+	padding: 20px 30px;
 }
 
-.section-1 h2{
+section.perfil-container .texto-perfil h2{
+	color: #698293;
+	font-size: 18px;
+}
+
+section.perfil-container .texto-perfil p{
+	color: rgb(190,190,190);
+	line-height: 25px;
+	font-size: 15px;
+	margin-top: 8px;
+}
+
+
+section.videos{
+	padding:70px 0 50px 0;
+}
+
+section.videos .box-video{
+	float: left;
+	width: 33.3%;
+	position: relative;
+	border:5px solid white;
+	/*background-color: green;*/
+	padding-top:calc(33.3% * 0.6);
+}
+
+section.videos iframe{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
+
+section.tratamentos{
+	padding: 70px 0;
+}
+
+section.tratamentos .tratamento-container{
+	width: 33.3%;
+	float: left;
+}
+
+section.tratamentos > h2{
+	color: #698293;
 	text-align: center;
-	color: #462663;
+	font-size: 18px;
+}
+
+section.tratamentos > .container{
+	padding: 80px 0;
+}
+
+.tratamento-single{
+	padding: 20px;
+}
+
+.tratamento-single h2{
+	font-size: 18px;
+	color: #737373;
+}
+
+.tratamento-single p{
+	padding: 10px 0;
+	font-size: 13px;
+	color: #b4b4b4;
+}
+
+section.depoimentos h2{
+	color: #698293;
+	text-align: center;
+	font-size: 18px;
+}
+
+section.depoimentos > .container{
+	padding: 30px 0;
+	max-width: 400px;
+}
+
+
+section.depoimentos .depoimento-single{
+	text-align: center;
+	width: 100%;
+	padding: 0 2%;
+}
+
+.depoimento-single quote{
+	font-size: 15px;
+	color: #b4b4b4;
+}
+
+.depoimento-single .nome-depoimento{
+	padding: 19px 0;
+}
+
+.nome-depoimento img{
+	width: 32px;
+	height: 32px;
+	border-radius: 16px;
+}
+
+.nome-depoimento span{
+	position: relative;
+	top: 4px;
+	font-size: 13px;
+	color: #b4b4b4;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.instagram-chamada{
+	float: left;
+	width: 100%;
+	text-align: center;
+	padding: 40px 0;
+	background: #98a5ae;
+}
+
+.instagram-chamada p{ 
+	line-height: 23px;
+	color: white;
+	padding: 10px 0;
+	font-size: 13px;
+}
+
+.mosaico-social{
+	float: left;
+	width: 100%;
+}
+
+.img-mosaico-single-social{
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	float: left;
+	width: calc(100% / 9);
+	padding-top: calc(100% / 9);
+	background-color: blue;
+	border: 6px solid white;
+}
+
+.facebook-chamada{
+	float: left;
+	width: 100%;
+	text-align: center;
+	padding: 40px 0;
+	background: #576975;
+}
+
+.facebook-chamada p{ 
+	line-height: 23px;
+	color: white;
+	padding: 10px 0;
+	font-size: 13px;
+}
+
+section.contato{
+	background: rgb(230,230,230);
+	padding: 60px 2%;
+}
+
+section.contato > h2{
+	color: #698293;
+	text-align: center;
+	font-size: 18px;
+}
+
+section.contato form{
+	width: 100%;
+	max-width: 500px;
+	margin: 30px auto;
+}
+
+.form-wraper{
+	float: left;
+	padding: 0 10px;
+	margin-top: 10px;
+}
+
+.w100{
+	width: 100%;
+}
+
+.w50{
+	width: 50%;
+}
+
+.form-wraper span{
+	font-size: 15px;
+	color: #b4b4b4;
+}
+
+.form-wraper input[type=text]{
+	width: 100%;
+	height: 35px;
+	/*colocar mesma altura do height*/
+	line-height: 35px;
+	padding-left: 9px;
+	border: 1px solid #dadada;
+	margin-top: 8px;
+}
+
+.form-wraper textarea{
+	width: 100%;
+	padding: 8px;
+	height: 121px;
+	/*resize é pra travar o tamannho do textarea*/
+	resize: none;
+	border: 1px solid #dadada;
+	margin-top: 8px;
+}
+
+.form-wraper input[type=submit]{
+	width: 100px;
+	height: 35px;
+	border: 0;
+	background: #688293;
+	color: white;
+	cursor: pointer;
+	display: inline-block;
+	/*
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	*/
+}
+
+footer{
+	padding: 40px 2%;
+	background-color: #688293;
+}
+
+footer .container{
+	max-width: 1100px;
+}
+
+footer .footer-block{
+	float: left;
+	width: 33.3%
+}
+
+.footer-block h2{
+	color: white;
+	font-size: 18px;
 	font-weight: normal;
 }
 
-.container-section{
-	margin-top: 40px;
-	text-align: center;
-}
-
-.container-single{
-	/*display: inline-block;
-	margin-right: -4px;
-	width: 33.3%;*/
-	float: left;
-	width: 33.33%;
-	padding: 30px;
-}
-
-/*excluir a div center*/
-/*.container-single:last-child{
-	margin-right: 0;
-}*/
-
-.container-single p{
-	display: inline-block;
-	text-align: justify;
-	padding: 10px;
-}
-
-.container-single img{
-	width: 70px;
-}
-
-.footer{
-	/*clear: both;*/
-	border-top: 2px solid #88888888;
-	padding: 20px 0;
-	text-align: center;
-	color: #888;
-}
-
-p{
+.footer-block p{
 	margin-top: 8px;
+	font-size: 14px;
+	color: white;
 }
 
 @media screen and (max-width: 1024px){
 
-	.header{
-		height: auto;
+	.img-mosaico-single-social{
+		width: calc(100% / 6);
+		padding-top: calc(100% / 6);		
+	}
+
+	/*começar da div 7, incremente em 1 e depois 
+	da display none em tudo*/
+	.mosaico-social > div:nth-of-type(1n+7){
+		display: none;
+	}
+	
+}
+
+
+@media screen and (max-width: 768px){
+
+	header nav.menu-desktop{
+		display: none;
+	}
+
+	header nav.menu-mobile{
+		display: block;
+	}
+
+	section.servicos > .container{
+		/*
+		max-width: 800px;
+		display: flex;
+		align-items: center;
+		position: relative;
+		top: -30px;
+		text-align: center;
+		*/
+		flex-direction: column;
+	} 
+
+	section.servicos > .container .box-servico:nth-of-type(1){
+		width: 90%;
+		max-width: 350px;
+		padding: 30px 2%;
+	}
+
+
+	section.servicos > .container .box-servico:nth-of-type(2){
+		width: 94%;
+		max-width: 380px;
+		padding: 40px 2%;
+	}
+
+
+	section.servicos > .container .box-servico:nth-of-type(3){
+		width: 90%;
+		max-width: 350px;
+		padding: 30px 2%;
+	}
+
+	section.perfil-container .perfil-wraper{
+		padding-top: 0;
+	}
+
+	section.perfil-container .perfil-wraper2{
+		/*
+		position: absolute;
+		left: 0;
+		top: 0;
+		display: flex;	
+		flex-direction: column;	
+		align-items: center;
 		width: 100%;
-		padding: 15px 0;
-		text-align: center;
-	}
-
-	.header img{
-		margin: 0;
-	}
-
-	.container-banner{			
-		padding: 0 2%;
-		width: 40px 2%;
-		height: auto;	
-		text-align: center;
-	}
-
-
-	.form{
-		margin-bottom: 30px;
-		
-		padding: 10px;
-		width: 60%;
-		max-width: 400px;
 		height: 100%;
-		float: right;
-		position: relative;		
-		top: 0;			
-	}
-
-	.container-list{
-		display: inline-block;
-		padding: 30px 0;		
-		float: left;
-		width: 40%;
-		max-width: 500px;
+		*/
 		height: auto;
-		
-		
+		position: static;
+		display: inline-block;
+		text-align: center;		
 	}
 
-	.input-container input[type=text]{		
+	section.perfil-container .img-perfil{
+		width: 50%;
+		padding-top: 70%;
+		display: inline-block;
+		height: auto;
+		/*
+		background-image: url('../imagens/img_perfil.png');
+		background-size: 100% 100%;
+		*/
+	}
+
+	section.perfil-container .texto-perfil{
+		text-align: justify;
+		display: inline-block;
 		width: 100%;
-		height: 55px;
+		padding: 0 30px;
 	}
 
+	section.videos{
+		text-align: center;
+	}
 
-	.form input[type=submit]{
-		max-width: 280px;
+	section.videos .box-video{
+		float: none;
+		width: 70%;
+		display: inline-block;
+		/*border:5px solid white;*/
+		/*background-color: green;*/
+		padding-top:calc(70% * 0.6);
+	}
+
+	.img-mosaico-single-social{
+		width: calc(100% / 3);
+		padding-top: calc(100% / 3);		
+	}
+
+	/*começar da div 7, incremente em 1 e depois 
+	da display none em tudo*/
+	.mosaico-social > div:nth-of-type(1n+4){
+		display: none;
+	}
+
+	footer{
+		text-align: center;
+	}
+
+	footer .footer-block{
+		float: none;
 		width: 100%;
-		height: 56px;
-		
+		margin: 30px 0;
+	}	
+
+}
+
+@media screen and (max-width: 580px){
+
+	section.perfil-container .img-perfil{
+		width: 80%;
+		padding-top: 110%;		
 	}
 
-	.form input[type=submit]:hover{
-		background-color: #323665;
+	section.videos .box-video{
+		width: 100%;
+		/*border:5px solid white;*/
+		/*background-color: green;*/
+		padding-top:calc(100% * 0.6);
+	}
+
+	.w50{
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 480px){
+
+	header .logo img{
+		width: 200px;
 	}
 
 
 }
-
-@media screen and (max-width: 768px){
-	.container-2{
-		padding-right: 4%;
-		padding-left: 4%; 
-	}
-
-	.container-list{
-		margin-top: 30px;
-		float: none;
-		display: inline-block;
-		width: 100%;s
-	}
-
-	.form{
-		float: none;
-		display: inline-block;
-		width: 90%;
-		margin-top: 30px;
-	}
-
-	.container-single{		
-		float: none;
-		width: 100%;
-		max-width: 600px;
-		padding: 30px 0;
-	}
-} 
