--- a/Projeto_04_WebMaster/css/style.css
+++ b/Projeto_04_WebMaster/css/style.css
@@ -174,7 +174,7 @@ section.perfil-container .perfil-wraper2{
 section.perfil-container .img-perfil{
 	width: 40%;
 	height: 100%;
-	background-image: url('../imagens/img_perfil.png');
+	background-image: url('../imagens/img_perfil.jpeg');
 	background-size: 100% 100%;
 }
 
